--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.11",
+    "primeng": "^17.18.12",
+    "primeng-sass-theme": "github:primefaces/primeng-sass-theme#17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
