Updated .env and settings, easier

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,17 +1,34 @@
-# Database
-DB_USER=""
+# Database, lo estoy dejando en mysql por defcto
+DB_ENGINE="django.db.backends.mysql" # Posibles Motores: django.db.backends.postgresql, django.db.backends.mysql, django.db.backends.sqlite3, django.db.backends.oracle
+DB_USER="root"
 DB_PASSWORD=""
-DB_NAME=""
-DB_HOST=""
-DB_PORT=""
+DB_NAME="tutoria"
+DB_HOST="localhost"
+DB_PORT="3306"
+
+DEBUG="True"
 
 # Oauth
+# Lo sacan en google cloud, no es necesario tho
+# Dejenlo vacío
 GOOGLE_OAUTH2_KEY=""
 GOOGLE_OAUTH2_SECRET=""
 
-# Redis
+# Redis dejar vacío si no se tiene un servidor de REDIS
+# No intenten instalarse REDIS, no hay tiempo, dejenlo así
 REDIS_URL=""
 
-# Email
+# Email; las credenciales se sacan de la docu de django
+# Mejor lo pongo porque nadie sabe leer docu xd
+# https://docs.djangoproject.com/en/5.0/topics/email/#smtp-backend
+# Y de aquí crean la contraseña de aplicación de gmail
+# https://myaccount.google.com/apppasswords
 EMAIL_HOST_USER=""
 EMAIL_HOST_PASSWORD=""
+
+# Frontend
+FRONTEND_URL="http://localhost:4200/"
+
+# Redirects
+LOGIN_REDIRECT_URL="http://localhost:4200/"
+LOGOUT_REDIRECT_URL="http://localhost:4200/"
