--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ constantly==23.10.4
 cryptography==43.0.0
 daphne==4.1.2
 defusedxml==0.8.0rc2
+dj-database-url==2.3.0
 Django==5.1
 django-cors-headers==4.4.0
+django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 hyperlink==21.0.0
@@ -20,6 +22,7 @@ idna==3.7
 incremental==24.7.2
 iniconfig==2.0.0
 msgpack==1.0.8
+mysqlclient==2.2.6
 oauthlib==3.2.2
 packaging==24.1
 pillow==10.4.0
@@ -28,6 +31,7 @@ psycopg==3.2.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pygraphviz==1.14
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
 pytest==8.3.2
