--- a/server/.env.example
+++ b/server/.env.example
@@ -32,3 +32,5 @@ FRONTEND_URL="http://localhost:4200/"
 # Redirects
 LOGIN_REDIRECT_URL="http://localhost:4200/"
 LOGOUT_REDIRECT_URL="http://localhost:4200/"
+
+API_KEY="1eb2ed4b-db5b-4cc4-9846-79099f2735c2"
